[package]
name = "clap_bench"
version = "0.0.0"
description = "Benchmarks for clap"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60.0"  # MSRV
publish = false

[package.metadata.release]
release = false

[dev-dependencies]
clap = { path = "../", version = "4.0.0-alpha.0", default-features = false, features = ["std", "help"] }
criterion = "0.4.0"
lazy_static = "1"

[[bench]]
harness = false
name = "01_default"
path = "benches/01_default.rs"

[[bench]]
harness = false
name = "02_simple"
path = "benches/02_simple.rs"

[[bench]]
harness = false
name = "03_complex"
path = "benches/03_complex.rs"

[[bench]]
harness = false
name = "04_new_help"
path = "benches/04_new_help.rs"

[[bench]]
harness = false
name = "05_ripgrep"
path = "benches/05_ripgrep.rs"

[[bench]]
harness = false
name = "06_rustup"
path = "benches/06_rustup.rs"
