[package]
name = "clap_bench"
version = "0.0.0"
description = "Benchmarks for clap"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.release]
release = false

[dev-dependencies]
clap = { path = "../", version = "4.0.0", default-features = false, features = ["std", "help"] }
criterion = "0.4.0"
lazy_static = "1"

[[bench]]
harness = false
name = "01_default"
path = "benches/01_default.rs"

[[bench]]
harness = false
name = "02_simple"
path = "benches/02_simple.rs"

[[bench]]
harness = false
name = "03_complex"
path = "benches/03_complex.rs"

[[bench]]
harness = false
name = "04_new_help"
path = "benches/04_new_help.rs"

[[bench]]
harness = false
name = "05_ripgrep"
path = "benches/05_ripgrep.rs"

[[bench]]
harness = false
name = "06_rustup"
path = "benches/06_rustup.rs"
