[package]
name = "clap_bench"
version = "0.0.0"
description = "Benchmarks for clap"
publish = false
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.release]
release = false

[dev-dependencies]
clap = { path = "../", version = "4.0.0", default-features = false, features = ["std", "help"] }
divan = "0.1.14"
lazy_static = "1.4.0"

[[bench]]
harness = false
name = "empty"

[[bench]]
harness = false
name = "simple"

[[bench]]
harness = false
name = "complex"

[[bench]]
harness = false
name = "rustup"

[[bench]]
harness = false
name = "ripgrep"

[lints]
workspace = true
