[package]
name = "clap_complete_fig"
version = "3.1.0"
edition = "2018"
include = [
	"src/**/*",
	"Cargo.toml",
	"LICENSE-*",
	"README.md"
]
description = "A generator library used with clap for Fig completion scripts"
repository = "https://github.com/clap-rs/clap/tree/master/clap_complete_fig"
documentation = "https://docs.rs/clap_complete_fig"
keywords = [
	"clap",
	"cli",
	"generate",
	"completion",
	"fig",
]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/clap-rs/clap/compare/{{tag_name}}...HEAD", exactly=1},
]

[lib]
bench = false

[dependencies]
clap = { path = "../", version = "3.1.0", default-features = false, features = ["std"] }
clap_complete = { path = "../clap_complete", version = "3.1.0" }

[dev-dependencies]
snapbox = { version = "0.2", features = ["diff"] }
