[package]
name = "clap_complete_nushell"
authors = [ "nibon7 <nibon7@163.com>" ]
version = "0.1.11"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A generator library used with clap for Nushell completion scripts"
homepage = "https://github.com/nibon7/clap_complete_nushell"
repository = "https://github.com/nibon7/clap_complete_nushell"
readme = "./README.md"
categories = ["command-line-interface"]
keywords = [
  "clap",
  "cli",
  "completion",
  "nushell"
]
exclude = [
 "tests/*",
 "scripts/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", default-features = false }
clap_complete = "4.0"

[dev-dependencies]
snapbox = { version = "0.4", features = ["diff"] }
nu-cli = "0.80.0"
nu-command = "0.80.0"
nu-parser = "0.80.0"
nu-protocol = "0.80.0"
nu-test-support = "0.80.0"
reedline = "0.19.1"
