[package]
name = "clap_complete_nushell"
version = "4.5.8"
description = "A generator library used with clap for Nushell completion scripts"
categories = ["command-line-interface"]
keywords = [
  "clap",
  "cli",
  "completion",
  "nushell"
]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/clap-rs/clap/compare/{{tag_name}}...HEAD", exactly=1},
]

[lib]
bench = false

[dependencies]
clap = { path = "../", version = "4.0.0", default-features = false, features = ["std"] }
clap_complete = { path = "../clap_complete", version = "4.5.51" }
completest = { version = "0.4.0", optional = true }
completest-nu = { version = "0.4.0", optional = true }

[dev-dependencies]
snapbox = { version = "0.6.0", features = ["diff", "examples", "dir"] }
clap = { path = "../", version = "4.0.0", default-features = false, features = ["std", "help"] }

[features]
default = []
unstable-shell-tests = ["dep:completest", "dep:completest-nu"]

[lints]
workspace = true
