[package]
name = "clap_completions"
version = "0.1.0"
authors = ["Kevin K. <kbknapp@gmail.com>"]
exclude = []
repository = "https://github.com/kbknapp/clap-rs.git"
documentation = "https://docs.rs/clap_completions/"
homepage = "https://clap.rs/"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["command-line", "completions", "complete", "completer"]
categories = ["command-line-interface"]
description = """
Generates completion scripts for clap enabled CLIs
"""

[dependencies]
clap = { path = "../" }
clippy    = { version = "~0.0.131", optional = true }

[features]
unstable    = [] # for building with unstable clap features (doesn't require nightly Rust) (currently none)
nightly     = [] # for building with unstable Rust features (currently none)
lints       = ["clippy"] # Requires nightly Rust
debug       = [] # Enables debug messages
no_cargo    = [] # Enable if you're not using Cargo, disables Cargo-env-var-dependent macros

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
# codegen-units ignored with lto=true

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

