[package]
name = "clap_derive"
version = "4.0.21"
description = "Parse command line argument by defining a struct, derive crate."
repository = "https://github.com/clap-rs/clap/tree/master/clap_derive"
categories = ["command-line-interface", "development-tools::procedural-macro-helpers"]
keywords = [
  "clap",
  "cli",
  "parse",
  "derive",
  "proc_macro"
]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.release]
shared-version = true
dependent-version = "upgrade"
tag-name = "v{{version}}"

[lib]
proc-macro = true
bench = false

[dependencies]
syn = { version = "1.0.74", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.42"
heck = "0.4.0"
proc-macro-error = "1"

[features]
default = []
debug = []
unstable-v5 = ["deprecated"]
deprecated = []
raw-deprecated = ["deprecated"]
