[package]
name = "clap_derive"
version = "4.5.41"
description = "Parse command line argument by defining a struct, derive crate."
categories = ["command-line-interface", "development-tools::procedural-macro-helpers"]
keywords = [
  "clap",
  "cli",
  "parse",
  "derive",
  "proc_macro"
]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
shared-version = true
dependent-version = "upgrade"
tag-name = "v{{version}}"

[lib]
proc-macro = true
bench = false

[dependencies]
syn = { version = "2.0.8", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.69"
heck = "0.5.0"
pulldown-cmark = { version = "0.13.0", default-features = false, optional = true}
anstyle = {version ="1.0.10", optional = true}

[features]
default = []
debug = []
unstable-v5 = ["deprecated"]
deprecated = []
raw-deprecated = ["deprecated"]
unstable-markdown = ["dep:pulldown-cmark", "dep:anstyle"]

[lints]
workspace = true
