[package]
name = "clap_derive"
version = "4.6.0"
description = "Parse command line argument by defining a struct, derive crate."
categories = ["command-line-interface", "development-tools::procedural-macro-helpers"]
keywords = [
  "clap",
  "cli",
  "parse",
  "derive",
  "proc_macro"
]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
shared-version = true
dependent-version = "upgrade"
tag-name = "v{{version}}"

[lib]
proc-macro = true
bench = false

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
heck = "0.5.0"
pulldown-cmark = { version = "0.13.1", default-features = false, optional = true}
anstyle = {version ="1.0.13", optional = true}

[features]
default = []
debug = []
unstable-v5 = ["deprecated"]
deprecated = []
raw-deprecated = ["deprecated"]
unstable-markdown = ["dep:pulldown-cmark", "dep:anstyle"]

[lints]
workspace = true
