[package]
name = "clap_generate"
version = "3.0.0-beta.2"
edition = "2018"
authors = [
	"Kevin K. <kbknapp@gmail.com>",
	"Clap Maintainers"
]
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
description = "A generator library used with clap for shell completion scripts, manpage, etc."
repository = "https://github.com/clap-rs/clap/tree/master/clap_generate"
documentation = "https://docs.rs/clap_generate"
homepage = "https://clap.rs/"
keywords = [
	"clap",
	"cli",
	"generate",
	"completion",
	"manpage",
]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
bench = false

[dependencies]
clap = { path = "../", version = "3.0.0-beta.2" }

[dev-dependencies]
pretty_assertions = "0.6"
version-sync = "0.9"

[features]
default = []
debug = ["clap/debug"]
doc = []

[package.metadata.docs.rs]
features = ["doc"]
targets = ["x86_64-unknown-linux-gnu"]
