[package]
name = "clap_generate"
version = "3.0.0"
edition = "2018"
include = [
	"src/**/*",
	"Cargo.toml",
	"LICENSE-*",
	"README.md"
]
description = "Renamed to clap_complete"
repository = "https://github.com/clap-rs/clap/tree/master/clap_generate"
documentation = "https://docs.rs/clap_generate"
keywords = [
	"clap",
	"cli",
	"generate",
	"completion",
	"manpage",
]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
clap = { path = "../", version = "3.0.0", default-features = false, features = ["std"] }
clap_complete = { path = "../clap_complete", version = "3.0.0"}

[features]
default = []
debug = ["clap_complete/debug"]
