[package]
name = "clap_generate_fig"
version = "3.0.1"
edition = "2018"
include = [
	"src/**/*",
	"Cargo.toml",
	"LICENSE-*",
	"README.md"
]
description = "Renamed to clap_complete_fig"
repository = "https://github.com/clap-rs/clap/tree/master/clap_generate_fig"
documentation = "https://docs.rs/clap_generate_fig"
keywords = [
	"clap",
	"cli",
	"generate",
	"completion",
	"fig",
]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
bench = false

[dependencies]
clap_complete_fig = { path = "../clap_complete_fig", version = "3.0.0"}
